--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,19 +8,19 @@
   url = "#about"
   weight = 10
 
-[[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 20
-
-[[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 30
+#[[main]]
+#  name = "Projects"
+#  url = "#projects"
+#  weight = 20
 
 [[main]]
   name = "Publications"
-  url = "#featured"
+  url = "#publications"
+  weight = 30
+
+[[main]]
+  name = "Teaching"
+  url = "#teaching"
   weight = 40
 
 [[main]]
@@ -31,6 +31,6 @@
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 # [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 70
+#   name = "CV"
+#   url = "files/ziquan_cv_jul19.pdf"
+#   weight = 70
